--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "showDebugPanel": true,
-    "envType": "dev_yxm",
+    "envType": "dev",
     "__注释__": "[showDebugPanel]:是否显示调试面板   [envType]:决定网络启动后，默认的网络环境类型",
     "env": {
         "dev_mock": {
@@ -21,13 +21,13 @@
         },
         "qa": {
             "name": "测试环境",
-            "host": "http://testapi.sharegoodsmall.com/gateway",
-            "h5": "http://testh5.sharegoodsmall.com"
+            "host": "https://testapi.sharegoodsmall.com/gateway",
+            "h5": "https://testh5.sharegoodsmall.com"
         },
         "online": {
             "name": "生产环境",
             "host": "",
-            "h5": "http://h5.sharegoodsmall.com"
+            "h5": "https://h5.sharegoodsmall.com"
         },
         "吴承骏Login": {
             "name": "测试环境_吴承骏",
