--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,22 +86,22 @@ android {
 
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':react-native-update')
+    api project(':react-native-update')
     api project(':react-native-video')
     api project(':react-native-autoheight-webview')
     api project(':react-native-vector-icons')
     api project(':react-native-svg')
     api project(':react-native-image-picker')
     api project(':react-native-linear-gradient')
-    compile project(':rn_deviceinfo')
+    api project(':rn_deviceinfo')
     api project(path: ':commonlib')
     api project(path: ':qiyu_service')
     api project(path: ':qrcode')
 
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.+'
-    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.+'
-    // Optional, if you use support library fragments:
-    debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.+'
+//    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.+'
+//    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.+'
+//    // Optional, if you use support library fragments:
+//    debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.+'
     api rootProject.ext.dependencies.support
 
     api rootProject.ext.dependencies.eventbus
