--- a/ios/Podfile
+++ b/ios/Podfile
@@ -11,6 +11,8 @@ inhibit_all_warnings!
 
 pod 'YYKit'
 pod 'AFNetworking'
+pod 'SDWebImage'
+pod 'TYCyclePagerView'
 pod 'CocoaLumberjack', '3.4.1'
 pod 'UICKeyChainStore', '2.1.1'
 pod 'SandBoxPreviewTool'    #用于实时预览沙盒文件目录
