--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,6 +93,7 @@ dependencies {
     api project(':react-native-svg')
     api project(':react-native-image-picker')
     api project(':react-native-linear-gradient')
+    api project(':react-native-geolocation')
     api project(':rn_deviceinfo')
     api project(path: ':commonlib')
     api project(path: ':qiyu_service')
