--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -14,6 +14,9 @@ project(':react-native-autoheight-webview').projectDir = new File(rootProject.pr
 include ':react-native-image-picker'
 project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
 
+include ':react-native-geolocation'
+project(':react-native-geolocation').projectDir = new File(rootProject.projectDir, '../node_modules/@mr/react-native-geolocation/android')
+
 include ':app'
 include ':commonlib'
 include ':qiyu_service'
