--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,6 +32,8 @@ pod 'UMCShare/Social/ReducedQQ'
 pod 'UMCShare/Social/ReducedSina'
 #七鱼
 pod 'QIYU_iOS_SDK',   '~> 4.2.1'
+#极光
+pod 'JPush', '3.1.0'
 
 ##绘图和icon
 #pod 'RNSVG', :path => '../node_modules/react-native-svg'
