--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -18,6 +18,11 @@ project(':react-native-svg').projectDir = new File(rootProject.projectDir, '../n
 include ':react-native-geolocation'
 project(':react-native-geolocation').projectDir = new File(rootProject.projectDir, '../node_modules/@mr/react-native-geolocation/android')
 
+
+
+include ':react-native-fetch-blob'
+project(':react-native-fetch-blob').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fetch-blob/android')
+
 include ':app'
 include ':commonlib'
 include ':qiyu_service'
